appId: vercel.app.deer_social
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users&follows&posts"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

- tapOn:
    label: "Create a curate list"
    id: "e2eGotoLists"
- tapOn:
    id: "newUserListBtn"
- assertVisible:
    id: "createOrEditListModal"
- tapOn:
    id: "editNameInput"
- inputText: "Good Ppl"
- tapOn:
    id: "editDescriptionInput"
- inputText: "They good"
- tapOn: "Save"
- tapOn: "Save"
- assertNotVisible:
    id: "createOrEditListModal"
- tapOn: "People"
- assertVisible: "Good Ppl"
- assertVisible: "They good"

- tapOn:
    label: "Edit display name and description via the edit curatelist modal"
    point: "90%,9%"
- tapOn: "Edit list details"
- assertVisible:
    id: "createOrEditListModal"
- tapOn:
    id: "editNameInput"
- eraseText
- inputText: "Bad Ppl"
- hideKeyboard
- tapOn:
    id: "editDescriptionInput"
- eraseText
- inputText: "They bad"
- tapOn: "Save"
- tapOn: "Save"
- assertNotVisible:
    id: "createOrEditListModal"
- assertVisible: Bad Ppl
- assertVisible: They bad

- tapOn:
    label: "Remove description via the edit curatelist modal"
    point: "90%,9%"
- tapOn: "Edit list details"
- assertVisible:
    id: "createOrEditListModal"
- tapOn:
    id: "editDescriptionInput"
- eraseText
- tapOn: "Save"
- tapOn: "Save"
- assertNotVisible:
    id: "createOrEditListModal"
- assertNotVisible:
    id: "listDescription"

- tapOn:
    label: "Delete the curatelist"
    point: "90%,9%"
- tapOn: "Delete List"
- tapOn:
    id: "confirmBtn"

- assertVisible:
    id: "newUserListBtn"
- tapOn:
    id: "newUserListBtn"
- assertVisible:
    id: "createOrEditListModal"
- tapOn:
    id: "editNameInput"
- inputText: "Good Ppl"
- tapOn:
    id: "editDescriptionInput"
- inputText: "They good"
- tapOn: "Save"
- tapOn: "Save"
- assertNotVisible:
    id: "createOrEditListModal"
- tapOn: "People"
- assertVisible: "Good Ppl"
- assertVisible: "They good"
- tapOn: "People"

- tapOn: "Start adding people"
- tapOn: "Search"
- inputText: "b"
- pressKey: Enter
- tapOn: "Add user to list"
- swipe:
    direction: DOWN
- assertVisible: "View Bob's profile"

- tapOn: "Posts"
- assertVisible:
    label: "Shows posts by the users in the list"
    id: "feedItem-by-bob.test"

- tapOn:
    label: "Pins the list"
    id: "pinBtn"
- tapOn:
    id: "e2eGotoHome"
- tapOn: "Good Ppl"
- assertVisible:
    id: "feedItem-by-bob.test"
- tapOn:
    id: "e2eGotoFeeds"
- tapOn:
    id: "saved-feed-Good Ppl"
- assertVisible:
    id: "feedItem-by-bob.test"
- tapOn:
    id: "unpinBtn"
- tapOn:
    id: "bottomBarHomeBtn"
- assertNotVisible:
    id: "homeScreenFeedTabs-Good Ppl"
- tapOn:
    id: "e2eGotoLists"
- tapOn: "Good Ppl"

- tapOn: "People"
- assertVisible: "View Bob's profile"
- tapOn:
    point: "90%,43%"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"

- tapOn:
    id: "bottomBarSearchBtn"
- tapOn: "Search for posts, users[,]? or feeds"
- inputText: "bob"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Add to Lists"
- assertVisible:
    id: "userAddRemoveListsModal"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"
- assertNotVisible:
    id: "userAddRemoveListsModal"
- tapOn:
    id: "profileHeaderDropdownBtn"
- tapOn: "Add to Lists"
- assertVisible:
    id: "userAddRemoveListsModal"
- tapOn:
    id: "user-bob.test-addBtn"
- tapOn:
    id: "doneBtn"
- assertNotVisible:
    id: "userAddRemoveListsModal"
